--- a/contacts.html
+++ b/contacts.html
@@ -33,6 +33,13 @@
           <p>
           E-mail: tomas.cerny03@seznam.cz
         </p>
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email"><br><br>
+        <label for="number">Tel. číslo:</label>
+        <input type="text" id="number" name="numer"><br><br>
+        <label for="comment">Komentář:</label>
+        <input type="text" id="comment" name="comment"><br><br>
+        <input type="submit" value="Potvrdit">
       </section>
       </div>
 
