--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@
         <label for="email">Email:</label>
         <input type="text" id="email" name="email"><br><br>
         <label for="number">Tel. číslo:</label>
-        <input type="text" id="number" name="numer"><br><br>
+        <input type="text" id="number" name="number"><br><br>
         <label for="comment">Komentář:</label>
         <input type="text" id="comment" name="comment"><br><br>
         <input type="submit" value="Potvrdit">
